--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<header>
-		<img class="logoalura" src="imagens/Vector.jpg" alt="Logo da Alura">
+		<img class="logoalura" src="imagens/Vector.jpg">
 		<h1>Decodificador de Texto</h1>	
 	</header>
 
